--- a/src/Component/MovieCard/MovieCard.css
+++ b/src/Component/MovieCard/MovieCard.css
@@ -1,17 +1,27 @@
-.cardbody{
-    height: 320px;
-    background-image: url("../../assets/backgroud-info-card.jpg");
+.cardbody {
+  height: 320px;
+  background-image: url("../../assets/backgroud-info-card.jpg");
 }
 
-.movies{
-    margin: 1%;
+.movies {
+  margin: 1%;
 }
 
-.movieinfo{
-    font-size: 12px;
-    color: white;
+.movieinfo {
+  font-size: 12px;
+  color: white;
 }
 
-.movietitle{
-    color: #7c9473;
+.movietitle {
+  color: #7c9473;
+}
+
+.btns {
+  display: flex;
+  justify-content: space-around;
+}
+
+.linkbtn {
+  font-size: larger !important;
+  color: rgb(113, 113, 255) !important;
 }
