--- a/src/Component/addTrailer/AddTrailer.css
+++ b/src/Component/addTrailer/AddTrailer.css
@@ -1,19 +1,21 @@
-.description {
-  padding: 3%;
-  font-family: "Reggae One", cursive !important;
-  font-size: 25px !important;
-  color: black;
-  background-color: rgb(145, 141, 141, 0.6);
-  border-bottom-style: hidden;
-}
-
 .video {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 3%;
+  justify-items: start;
+  margin: 7%;
+}
+
+.videobox {
+  box-shadow: 0 0 30px grey;
 }
 
 .backbtn {
-  margin-top: 20%;
+  margin-top: 2%;
+}
+.description {
+  margin-top: 5%;
+  font-weight: normal;
+  color: rgb(196, 193, 193) !important;
+  font-family: "Big Shoulders Inline Display", cursive !important;
 }
